margin fix for correct/wrong result on mobile

--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ ol {
 .answer-style {
   color: hsl(206, 17%, 28%);
   font-size: 25px;
+  margin-top: -30px;
 }
 
 .sub
